--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,39 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"name": "LocalFortress",
 	"version": "1.0",
 
 	"description": "Protect your privacy by blocking most requests to localhost.",
 
 	"icons": {
-		"48": "icons/icon-48.png"
+		"48": "icons/icon-48.png",
+		"96": "icons/icon-96.png"
 	},
 
-	"content_scripts": [
-		{
-			"all_frames": true,
-			"matches": ["<all_urls>"],
-			"js": ["index.js"]
+	"background": {
+		"scripts": ["index.js"]
+	},
+
+	"permissions": [
+		"storage",
+		"tabs",
+		"webRequest",
+		"webRequestBlocking"
+	],
+
+	"host_permissions": [
+		"<all_urls>"
+	],
+
+	"action": {
+		"default_icon": "icons/icon-32.png",
+		"default_title": "LocalFortress",
+		"default_popup": "popup/index.html"
+	},
+
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "localfortress@oirnoir.dev"
 		}
-	]
+	}
 }
