--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "web-ext run",
+		"lint": "web-ext lint",
+		"build": "web-ext build"
   },
   "keywords": [],
   "author": "",
