--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "web-ext run",
 		"lint": "web-ext lint",
-		"build": "web-ext build"
+		"build": "rm -r ./web-ext-artifacts && web-ext build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "OIRNOIR",
+  "license": "GPL-3.0-or-later",
 	"devDependencies": {
 		"@types/firefox-webext-browser": "^120.0.0"
 	}
