--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "web-ext run",
     "lint": "web-ext lint",
-    "build": "rm -r ./web-ext-artifacts && web-ext build",
+    "build": "web-ext build -o",
 		"publish": "web-ext sign"
   },
   "keywords": [],
