--- a/.github/workflows/web-ext-publish.yml
+++ b/.github/workflows/web-ext-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will publish an extension for Firefox when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Firefox Publish
 
 on:
   release:
