Update release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,3 +35,5 @@ jobs:
         with:
           artifacts: "web-ext-artifacts/*"
           makeLatest: true
+      
+      - uses: ./.github/workflows/web-ext-publish.yml
