--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,5 +35,18 @@ jobs:
         with:
           artifacts: "web-ext-artifacts/*"
           makeLatest: true
-      
-      - uses: ./.github/workflows/web-ext-publish.yml@v1
+  publish-firefox:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+      - run: pnpm install
+      - run: pnpm build
+      - run: pnpm publish
+        env:
+          WEB_EXT_API_KEY: ${{secrets.web_ext_api_key}}
+          WEB_EXT_API_SECRET: ${{secrets.web_ext_api_secret}}
