Update steps for the manual publish

--- a/.github/workflows/web-ext-publish.yml
+++ b/.github/workflows/web-ext-publish.yml
@@ -5,20 +5,32 @@ name: Firefox Publish
 
 on:
   release:
-    types: [published]
+    types: [created]
 
 jobs:
   publish-firefox:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+
+      - name: Set up node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
-          registry-url: https://registry.npmjs.org/
-      - run: pnpm install
-      - run: pnpm build
-      - run: pnpm publish
+      
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+
+      - name: Install Node.js dependencies
+        run: pnpm install
+
+      - name: Build Extension
+        run: pnpm run build
+      
+      - name: Publish Extension
+        run: pnpm run publish
         env:
           WEB_EXT_API_KEY: ${{secrets.web_ext_api_key}}
           WEB_EXT_API_SECRET: ${{secrets.web_ext_api_secret}}
